--- a/budgie-web/src/app/components/dashboard/dashboard.component.html
+++ b/budgie-web/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,41 @@
 <app-header></app-header>
-<app-transaction-form></app-transaction-form>
+<app-transaction-form
+  (onTransactionSaved)="requestTransactions()"
+></app-transaction-form>
+<div *ngIf="transactions" class="transactions-container">
+  <table>
+    <thead>
+      <th>
+        Type
+      </th>
+      <th>
+        Category
+      </th>
+      <th>
+        Amount
+      </th>
+      <th>
+        Description
+      </th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let transaction of transactions">
+        <td>
+          {{ transaction.type }}
+        </td>
+        <td>
+          {{ getCategoryName(transaction.categoryId) }}
+        </td>
+        <td>
+          {{ transaction.amount }}
+        </td>
+        <td>
+          {{ transaction.description }}
+        </td>
+        <td>
+            <mat-icon (click)="onDeleteClick(transaction)">delete</mat-icon>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
